ref(gateway): Remove unused Provider parameter
Provider parameter is not used and may not make sense in the near future.
Implementing adds project complexity with little benefit.
If at a later stage it makes sense can always considering Implementing it properly
